syntax = "proto3";

option go_package = "/types";

import "google/protobuf/timestamp.proto";

service Recorder {
    rpc GetJobExecutions (GetJobExecutionsRequest) returns (stream GetJobExecutionsReply);
    rpc AddJobExecution (AddJobExecutionRequest) returns (AddJobExecutionReply);
}

message GetJobExecutionsRequest{
    optional string tenantId =1;
}

message GetJobExecutionsReply{
   string result = 1;
}

message AddJobExecutionRequest{
    JobExecution execution = 1;
}

message AddJobExecutionReply{
}

message JobExecution{
    string eventId = 1;
    string tenantId = 2;
    string queueId = 3;
    google.protobuf.Timestamp date=4;
    string server = 5;
    JobResult result = 6;
}

message JobResult {
    uint64 code = 1;
    string message = 2;

}